Some changes (meteorology and Arduino)
